--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@ li1 {
         <ul>
             
             <li>PHISHING ATTACK </li>
+            <li>LOCATION HACKING</li>
+            <li>GALLERY HACKING</li>
+            <li>LIVE CAMERA AND MICROPHONE HACKING</li>
             <li>MAIL SPOOFING ATTACK</li>
             <li>MAN OF THE MIDDLE ATTACK</li>
             <li>CREDENTIAL HERVESTING ATTACK</li>
